# rust-rocket-angular-seed

./: .env  .gitattributes  .travis.yml  Cargo.toml  LICENSE  README.md  main-es2015.7f105f48200a80a3beef.js  main-es5.7f105f48200a80a3beef.js  package-lock.json
migrations/2020-04-11-071845_users/: up.sql
migrations/2020-04-11-082652_customers/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
ui/: 3rdpartylicenses.txt  AngularUp.txt  README.md  angular.json  index.html  package-lock.json  package.json
ui/src/: index.html
ui/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
ui/src/app/shared/: app.service.ts
